# pySigma-pipeline-crowdstrike-stub

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_crowdstrike.py
